1582658171 | 50 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_ukrainian.txt,  M drivers/htc/resources/localization/localization_nl_NL.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/config/vrcompositor_actions_cs_CZ.json,  M resources/config/vrcompositor_actions_da_DK.json,  M resources/config/vrcompositor_actions_de_DE.json,  M resources/config/vrcompositor_actions_fr_FR.json,  M resources/config/vrcompositor_actions_hu_HU.json,  M resources/config/vrcompositor_actions_it_IT.json,  M resources/config/vrcompositor_actions_nb_NO.json,  M resources/config/vrcompositor_actions_pl_PL.json,  M resources/config/vrcompositor_actions_pt_BR.json,  M resources/
https://steamdb.info/patchnotes/4714698/

--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -1095,9 +1095,9 @@
 "[english]MenuAction_ForceFirmware"	"Force Firmware"
 "MenuAction_DirectMode"	"Přímý zobrazovací režim"
 "[english]MenuAction_DirectMode"	"Direct Display Mode"
-"MenuAction_EnableDirectMode"	"Zapnout přímý zobrazovací režim"
+"MenuAction_EnableDirectMode"	"Zapnout přímý zobr. režim"
 "[english]MenuAction_EnableDirectMode"	"Enable Direct Display Mode"
-"MenuAction_DisableDirectMode"	"Vypnout přímý zobrazovací režim"
+"MenuAction_DisableDirectMode"	"Vypnout přímý zobr. režim"
 "[english]MenuAction_DisableDirectMode"	"Disable Direct Display Mode"
 "MenuAction_PairController"	"Spárovat ovladač"
 "[english]MenuAction_PairController"	"Pair Controller"
