--- a/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
@@ -595,7 +595,7 @@
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"More info"
 "Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Інформація про пристрій"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Device Info"
-"Warning_DismissableWarning_MissedFrames_Header"	"Помилка застосунка"
+"Warning_DismissableWarning_MissedFrames_Header"	"Помилка застосунку"
 "[english]Warning_DismissableWarning_MissedFrames_Header"	"Application Error"
 "Explanation_RemoveAllSteamVRUSBDevices"	"Вилучіть всі пов’язані зі SteamVR пристрої USB з системи для повторної інсталяції їх драйверів."
 "[english]Explanation_RemoveAllSteamVRUSBDevices"	"Remove all USB devices related to SteamVR from this system to reinstall their drivers."
@@ -603,7 +603,7 @@
 "[english]Explanation_ResetDismissableWarnings"	"Temporary warnings are reset and will show again as needed."
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"Детальніше"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"More info"
-"Warning_DismissableWarning_MissedFrames_Description"	"Поточний застосунок ВР запускається дуже повільно — це може зіпсувати враження. Причинами цього можуть бути високі системні вимоги застосунка або слабкі системні характеристики вашого комп’ютера."
+"Warning_DismissableWarning_MissedFrames_Description"	"Поточний застосунок ВР запускається дуже повільно — це може зіпсувати враження. Причинами цього можуть бути високі системні вимоги застосунку або слабкі системні характеристики вашого комп’ютера."
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can result in a bad experience. This may be because the application is too demanding, or your computer is too slow."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Помилка Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Error"
