--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -154,7 +154,7 @@
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Перезавантаження SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
-"SteamVRSystemState_Startup"	"Йде запуск ВР…"
+"SteamVRSystemState_Startup"	"Триває запуск ВР…"
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
 "SteamVRSystemState_ShutdownRequested"	"Вихід із ВР…"
 "[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
@@ -650,7 +650,7 @@
 "[english]MenuAction_RunTutorial"	"Tutorial"
 "PairingWizard_CheckForDongles_Content"	"Перевірити доступні бездротові передавачі…"
 "[english]PairingWizard_CheckForDongles_Content"	"Check for available wireless receivers..."
-"PairingWizard_HelperAppFailed_Content"	"Помилка виклику застосунка-помічника: %1."
+"PairingWizard_HelperAppFailed_Content"	"Помилка виклику застосунку-помічника: %1."
 "[english]PairingWizard_HelperAppFailed_Content"	"Calling the helper application failed with error %1."
 "PairingWizard_HelperAppFailed_Error_FailedToStart"	"«Не вдалося запустити» (0)"
 "[english]PairingWizard_HelperAppFailed_Error_FailedToStart"	"'Failed to Start' (0)"
@@ -1229,7 +1229,7 @@
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Device info"
 "Warning_DismissableWarning_WarningsForTheFirstTime_Description"	"Наводьте курсор на піктограми нижче для перегляду стану та докладної інформації щодо кожного з пристроїв. Якщо треба виконати якусь дію, наприклад, оновити мікропрограму, ви побачите ( i ) на відповідній піктограмі."
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Description"	"Hover over the icons below to see details and status about each device. If you need to take an action like updating firmware, you will see an ( i ) appear on the icon."
-"Status_Starting"	"Йде запуск"
+"Status_Starting"	"Триває запуск"
 "[english]Status_Starting"	"Starting"
 "Status_Quitting"	"Вихід"
 "[english]Status_Quitting"	"Exiting"
@@ -1767,7 +1767,7 @@
 "[english]PlaylistPlayer_Continue_Button"	"Continue"
 "PlaylistPlayer_State_NotRunning"	"Не відтворюється"
 "[english]PlaylistPlayer_State_NotRunning"	"Not Running"
-"PlaylistPlayer_State_Starting"	"Йде запуск"
+"PlaylistPlayer_State_Starting"	"Триває запуск"
 "[english]PlaylistPlayer_State_Starting"	"Starting"
 "PlaylistPlayer_State_Running"	"Відтворюється"
 "[english]PlaylistPlayer_State_Running"	"Running"
@@ -1891,7 +1891,7 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Success_LowerText"	" "
 "VRInitError_Driver_HmdUnknown_Description"	"Не вдалося знайти вказаний у налаштуваннях серійний номер шолома."
 "[english]VRInitError_Driver_HmdUnknown_Description"	"The specific headset serial number named in the settings cannot be found."
-"Settings_Advanced_Supersampling_Header"	"Роздільність застосунка"
+"Settings_Advanced_Supersampling_Header"	"Роздільність застосунку"
 "[english]Settings_Advanced_Supersampling_Header"	"Application Resolution"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Для застосування цієї зміни потрібен перезапуск SteamVR."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
@@ -2005,9 +2005,9 @@
 "[english]Settings_Advanced_Supersampling_Warning"	"<b>WARNING:</b> The resolution setting below will affect all applications. To change the resolution for a specific application, visit the Applications tab."
 "Settings_Advanced_SupersamplingManualOverride"	"Увімкнути нестандартну роздільність"
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Enable custom resolution"
-"Explanation_Supersampling_Header"	"SteamVR автоматично встановлює роздільність вашого застосунка на основі швидкодії відеокарти."
+"Explanation_Supersampling_Header"	"SteamVR автоматично встановлює роздільність вашого застосунку на основі швидкодії відеокарти."
 "[english]Explanation_Supersampling_Header"	"SteamVR automatically sets your application resolution based on the performance of your GPU."
-"Settings_PerApplication_Header"	"Використовуйте ці параметри для створення унікальних налаштуваннях для кожного застосунка"
+"Settings_PerApplication_Header"	"Використовуйте ці параметри для створення унікальних налаштуваннях для кожного застосунку"
 "[english]Settings_PerApplication_Header"	"Use these options to create unique settings per application"
 "Settings_PerApplication_AppResTitle"	"Нестандартна роздільність"
 "[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
@@ -2359,7 +2359,7 @@
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Застосунок уже зареєстровано"
 "[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
-"VRApplicationError_NoManifest"	"Не знайдено маніфесту застосунка"
+"VRApplicationError_NoManifest"	"Не знайдено маніфесту застосунку"
 "[english]VRApplicationError_NoManifest"	"No application Manifest"
 "VRApplicationError_NoApplication"	"Немає застосунків"
 "[english]VRApplicationError_NoApplication"	"No application"
@@ -2383,9 +2383,9 @@
 "[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
 "VRApplicationError_OldApplicationQuitting"	"Інший застосунок уже закривається"
 "[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
-"VRApplicationError_TransitionAborted"	"Запуск застосунка скасовано користувачем"
+"VRApplicationError_TransitionAborted"	"Запуск застосунку скасовано користувачем"
 "[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
-"VRApplicationError_IsTemplate"	"Це шаблон застосунка"
+"VRApplicationError_IsTemplate"	"Це шаблон застосунку"
 "[english]VRApplicationError_IsTemplate"	"This is a template application"
 "VRApplicationError_SteamVRIsExiting"	"SteamVR закривається"
 "[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
