--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json
@@ -15,11 +15,11 @@
 	"pairingdevice_knuckles_controllername": "Valve Index-controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive-controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
+	"pairingdevice_logitechvrinkpilotedition_shortname": "VR Ink Pilot - Logitech-editie",
 	"pairingdevice_a_knuckles_controllername": "een Valve Index-controller",
 	"pairingdevice_a_vivewand_shortname": "een HTC Vive-controller",
 	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "een Logitech-editie van VR Ink Pilot",
 	"pair_controller_title": "%1$s koppelen",
 	"pairinginstructions_generic_desc": "Zet je controller in de koppelmodus",
 	"pairsuccess_title": "Gelukt!",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Menuknop",
 	"pairing_button_b": "B-knop",
 	"pairing_knuckles_instructions_press": "Houd de %1$s en %2$s ingedrukt totdat het licht op de controller blauw begint te knipperen...",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Houd de %1$s en %2$s ingedrukt totdat het licht op de pen blauw begint te knipperen...",
 	"pairing_tracker_instructions_press": "Houd de %1$s ingedrukt totdat het licht op de tracker blauw begint te knipperen...",
 	"pairing_button_differentcontroller": "Ik wil een ander soort controller koppelen...",
 	"pairing_button_done": "Gereed",
