--- a/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
@@ -239,7 +239,7 @@
 "[english]VRInitError_Driver_RuntimeOutOfDate_Action"	"Visit oculus.com"
 "VRInitError_Driver_HmdInUse_Header"	"SteamVR-fout"
 "[english]VRInitError_Driver_HmdInUse_Header"	"SteamVR Error"
-"VRInitError_Driver_HmdInUse_Description"	"De headset wordt door een andere toepassing gebruikt. Sluit alle andere VR-toepassingen om door te gaan."
+"VRInitError_Driver_HmdInUse_Description"	"Je headset wordt momenteel gebruikt door een andere toepassing. Sluit deze toepassing af en probeer het opnieuw."
 "[english]VRInitError_Driver_HmdInUse_Description"	"Your headset is being used by another application. Please quit that app, then try again."
 "VRInitError_Driver_HmdInUse_Action"	"Opnieuw proberen"
 "[english]VRInitError_Driver_HmdInUse_Action"	"Try again"
@@ -299,7 +299,7 @@
 "[english]VRInitError_IPC_Failed_Action"	"More info"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"SteamVR-fout"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"SteamVR Error"
-"VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"SteamVR kon geen verbinding maken met de Oculus-runtime. Zorg ervoor dat je de nieuwste versie hebt geïnstalleerd."
+"VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"SteamVR was niet in staat om te verbinden met de Oculus-toepassing. Zorg ervoor dat je de meest recente versie hebt geïnstalleerd."
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"SteamVR was unable to connect to the Oculus app. Please make sure you have the latest version installed."
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"oculus.com bezoeken"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"Visit oculus.com"
@@ -575,7 +575,7 @@
 "[english]Warning_DismissableWarning_RunTutorialAgain_Description"	"You can use Room Setup or the Tutorial again anytime from the SteamVR menu below."
 "Warning_DismissableWarning_RunTutorialAgain_Action"	"Meer informatie"
 "[english]Warning_DismissableWarning_RunTutorialAgain_Action"	"More info"
-"Warning_DismissableWarning_BasestationsTooFarApart_Header"	"Basisstations staan te ver uit elkaar"
+"Warning_DismissableWarning_BasestationsTooFarApart_Header"	"Kennisgeving omtrent VR-configuratie"
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Header"	"VR setup notice"
 "Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Je basisstations zijn verder van elkaar verwijderd dan wordt aangeraden. Overweeg voor de beste ervaring om de basisstations te herpositioneren zodat deze niet meer dan 5,5 meter van elkaar verwijderd zijn."
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Your base stations are farther apart than recommended. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart. "
@@ -649,7 +649,7 @@
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"Bluetooth Settings"
 "Popover_Pose_Base_Action"	"Basisstation identificeren"
 "[english]Popover_Pose_Base_Action"	"Identify base station"
-"Popover_BaseStationsTooFarApart_Header"	"Basisstations staan te ver uit elkaar"
+"Popover_BaseStationsTooFarApart_Header"	"Kennisgeving omtrent VR-configuratie"
 "[english]Popover_BaseStationsTooFarApart_Header"	"VR setup notice"
 "Popover_BaseStationsTooFarApart_Description"	"Je basisstations staan %1 meter van elkaar verwijderd. Overweeg voor de beste ervaring om de basisstations te herpositioneren zodat deze niet meer dan 5,5 meter van elkaar verwijderd zijn."
 "[english]Popover_BaseStationsTooFarApart_Description"	"Your base stations are %1 meters apart. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart."
