--- a/drivers/htc/resources/localization/localization_nl_NL.json
+++ b/drivers/htc/resources/localization/localization_nl_NL.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Vive Tracker op de rechtervoet",
 	"vive_tracker_left_shoulder": "Vive Tracker op de linkerschouder",
 	"vive_tracker_right_shoulder": "Vive Tracker op de rechterschouder",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Vive Tracker op de linkerelleboog",
+	"vive_tracker_right_elbow": "Vive Tracker op de rechterelleboog",
+	"vive_tracker_left_knee": "Vive Tracker op de linkerknie",
+	"vive_tracker_right_knee": "Vive Tracker op de rechterknie",
 	"vive_tracker_waist": "Vive Tracker om de middel",
 	"vive_tracker_chest": "Vive Tracker op de borst",
 	"vive_tracker_camera": "Vive Tracker op de camera",
